# WuWaOpt

./: .clang-format  .gitignore  CMakeLists.txt  FullStats.hpp  LICENSE  Random.hpp  WuWaEchoManager.cpp  WuWaOptim.cpp  WuWaScan.cpp  readme.md  vcpkg.json
Common/: CMakeLists.txt  ElementType.hpp  ImGuiUtil.hxx  Types.hpp
Common/Stat/: CMakeLists.txt  EchoSet.hpp  EffectiveStats.cpp  EffectiveStats.hpp  FullStats.cpp  FullStats.hpp  StatType.hpp
Loca/: CMakeLists.txt  Loca.cpp  Loca.hpp  StringArrayObserver.cpp  StringArrayObserver.hpp
Opt/: CMakeLists.txt  FullStats.hpp  OptUtil.hpp  OptimizerParmSwitcher.cpp  OptimizerParmSwitcher.hpp  SetStat.hpp  WuWaGa.cpp  WuWaGa.hpp  WuWaGa.inl
Opt/Config/: CMakeLists.txt  CharacterConfig.cpp  CharacterConfig.hpp  EchoConstraint.cpp  EchoConstraint.hpp  OptimizerConfig.cpp  OptimizerConfig.hpp  SkillMultiplierConfig.hpp
Opt/SubStatRolling/: CMakeLists.txt  SubStatRollConfig.cpp  SubStatRollConfig.hpp
Opt/Tweak/: CMakeLists.txt  CombinationMetaCache.cpp  CombinationMetaCache.hpp  CombinationTweaker.cpp  CombinationTweaker.hpp
Opt/UI/: Backpack.cpp  Backpack.hpp  CMakeLists.txt  OptimizerUIConfig.cpp  OptimizerUIConfig.hpp  PlotCombinationMeta.hpp  UIConfig.cpp  UIConfig.hpp
Opt/UI/Page/: CMakeLists.txt  CharacterPage.cpp  CharacterPage.hpp
Scan/: BackpackEchoScanner.cpp  BackpackEchoScanner.hpp  CMakeLists.txt  GameHandle.cpp  GameHandle.hpp
Scan/Recognizer/: CMakeLists.txt  CharacterRecognizer.hpp  EchoExtractor.cpp  EchoExtractor.hpp  EchoNameRecognizer.hpp  RecognizerBase.hpp  SetRecognizer.hpp  StatTypeRecognizer.hpp
Scan/Thread/: AdaptiveJobPool.cpp  AdaptiveJobPool.hpp  CMakeLists.txt
Scan/Win/: CMakeLists.txt  GameHandle.cpp  GameHandle.hpp  MouseControl.cpp  MouseControl.hpp
data/: CharacterSpecialSetConfig.yaml  EchoSetNameSet.json  MouseTrail.txt  characters_example.yaml  example_echos.json  example_echos.yaml
data/loca/: en-US.json  zh-CN.json
data/usage/: opt_backpack.md  opt_calculate.md  opt_input.md  opt_usage.md
